--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Page Title</title>
+  <title>Rock Paper Scissors</title>
 </head>
 <body>
-  <script>
-    // Your JavaScript goes here!
-    
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
